--- a/templates/include/navbar.html
+++ b/templates/include/navbar.html
@@ -13,6 +13,7 @@
 <header>
     <div class="logo">
         <img src="{% static 'images/logo-elsin.jpg' %}" alt="">
+        <p>Elsin-Colection</p>
     </div>
     <nav>
         <ul class="nav-links">
