--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -7,11 +7,12 @@
 body {
     font-family: Arial, sans-serif;
 
+
 }
 
 header {
-    background-color: rgba(132, 52, 255, 0.46);
-    color: #0c0000;
+    background-color: rgba(214, 0, 255, 0.46);
+    color: #ffffff;
     display: flex;
     justify-content: space-between;
     align-items: center;
