--- a/home/templates/home/product_detail.html
+++ b/home/templates/home/product_detail.html
@@ -19,8 +19,8 @@
 
             <div class="wrapper" style="margin-top: 10px">
                     <div id="image-slider">
-                        {% for image in images %}
-                            <img src="{{ product.image.url }}" alt="Product Image 1" style="height: 400px; width: 300px">
+                        {% for image in product.images.all %}
+                            <img src="{{ image.image.url }}" alt="Product Image 1" style="height: 400px; width: 300px">
                         {% endfor %}
                     </div>
 
