--- a/static/css/home-detail.css
+++ b/static/css/home-detail.css
@@ -60,3 +60,29 @@ body {
         padding: 10px 20px;
     }
 }
+body, html {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
+
+#background {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(135deg, #4b6cb7, #182848);
+}
+
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background: #111;
+    color: #fff;
+    text-align: center;
+    padding: 20px 0;
+    display: none;
+}
