--- a/templates/include/navbar.html
+++ b/templates/include/navbar.html
@@ -19,6 +19,7 @@
             <li><a href="#">تماس با ما</a></li>
             <li><a href="#">خدمات</a></li>
             <li><a href="#">درباره‌ی ما</a></li>
+            <li><a href="{% url 'accounts:register' %}">ثبت نام </a></li>
             <li><a href="#">محصولات</a></li>
             <li><a href="{% url 'home:home_page' %}">صفحه اصلی</a></li>
         </ul>
