--- a/home/templates/home/product_detail.html
+++ b/home/templates/home/product_detail.html
@@ -17,7 +17,7 @@
 <body>
 
 
-            <div class="wrapper" style="margin-top: 10px">
+            <div class="wrapper">
                     <div id="image-slider">
                         {% for image in product.images.all %}
                             <img src="{{ image.image.url }}" alt="Product Image 1" style="height: 400px; width: 300px">
