--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -1,25 +1,15 @@
 body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-}
-
-h1 {
-  text-align: center;
+    margin: 0;
+    padding: 0;
 }
 
 footer {
-  background-color: #000000;
-  text-align: center;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  padding: 12px 0;
-  color: #555;
-  transition: background-color 0.6s, color 0.9s;
-}
-
-footer:hover {
-  background-color: #cc06ff;
-  color: #000000;
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    transition: background-color 0.5s;
 }
