--- a/static/css/home-detail.css
+++ b/static/css/home-detail.css
@@ -7,7 +7,7 @@ body {
 .product-box {
     margin: 20px;
     padding: 20px;
-    border: 1px solid #ccc;
+    border: 5px solid #000000;
     border-radius: 5px;
 }
 
@@ -22,12 +22,12 @@ body {
 }
 
 .product-box p {
-    color: #666;
+    color: #000000;
 }
 
 .price {
     font-size: 1.2rem;
-    color: #ff6600;
+    color: #ff9900;
 }
 
 .btn {
@@ -35,7 +35,7 @@ body {
     padding: 5px 10px;
     background-color: #007bff;
     color: #fff;
-    border: none;
+    border: black;
     border-radius: 5px;
     cursor: pointer;
 }
@@ -80,7 +80,7 @@ footer {
     left: 0;
     bottom: 0;
     width: 100%;
-    background: #111;
+    background: #000000;
     color: #fff;
     text-align: center;
     padding: 20px 0;
