--- a/templates/base.html
+++ b/templates/base.html
@@ -6,15 +6,17 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>elsin-colection</title>
+    <title>elsin-collection</title>
 
     {% block header %}
 
     {% endblock %}
 </head>
 <body>
+
     {% include 'include/navbar.html' %}
     {% include 'include/footer.html' %}
+
 
     {% block content %}
 
