--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
 <body>
 
     {% include 'include/navbar.html' %}
+    {% include 'include/messages.html' %}
     {% include 'include/footer.html' %}
 
 
