--- a/static/css/detail_product_view.css
+++ b/static/css/detail_product_view.css
@@ -2,6 +2,8 @@ body {
     background-color: #f0f0f0;
     font-family: Arial, sans-serif;
     text-align: center;
+    align-items: center;
+    margin-top: 15px;
 }
 
 .wrapper {
