--- a/templates/include/navbar.html
+++ b/templates/include/navbar.html
@@ -12,7 +12,9 @@
 <body>
 <header>
     <div class="logo">
-        <img src="{% static 'images/logo-elsin.jpg' %}" alt="">
+          <a href="{% url 'home:home_page' %}">
+                <img src="{% static 'images/logo-elsin.jpg' %}" alt="عکس محصول " style="width: 70px; height: 70px">
+          </a>
     </div>
     <nav>
         <ul class="nav-links">
